--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 *{
     text-align: center;
+    margin : 0;
+    padding: 0;
 }
 a{
     color: black;
@@ -8,7 +10,7 @@ a{
 header{
     position: fixed;
     display: inherit;
-    height: 100px;
+    height: 80px;
     width: 100%;
     
 }
