--- a/views/section.ejs
+++ b/views/section.ejs
@@ -7,14 +7,14 @@
         <% if(locals.memoListData){ %>
             <ul>
                 <% for(var i=0;i < memoListData.length;i++){ %>
-                    <li><a href="/r1/update/<%=memoListData[i]%>"><%=memoListData[i]%></a></li>
+                    <li><a href="/memo/update/<%=memoListData[i]%>"><%=memoListData[i]%></a></li>
                 <% } %>
             </ul>
         <% } %>
     </div>
     <div class="contentBox" id="contentBox3">
-        <% if(locals.memoListData){ %>
-
+        <% if(locals.sectionPath){ %>
+            <%- include(sectionPath) -%>
         <% } %>
     </div>
 </section>
