--- a/views/section.ejs
+++ b/views/section.ejs
@@ -7,7 +7,7 @@
         <% if(locals.memoListData){ %>
             <ul>
                 <% for(var i=0;i < memoListData.length;i++){ %>
-                    <li><a href="/memo/update/<%=memoListData[i]%>"><%=memoListData[i]%></a></li>
+                    <li><a href="/memo/update/<%=memoListData[i].no%>"><%=memoListData[i].title%></a></li>
                 <% } %>
             </ul>
         <% } %>
