--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,8 +13,8 @@
             </ul>
         </div>
         <div id="subMenu">
-            <% if(locals.subList){ %>
-                <%- include(subList) -%>
+            <% if(locals.subCategory){ %>
+                <%- include(subCategory) -%>
             <% } %>
         </div>
     </nav>
