--- a/views/section.ejs
+++ b/views/section.ejs
@@ -1,9 +1,11 @@
 <section>
     <div class="contentBox" id="contentBox1">
-        <p> 이제 뷰 좀 써보네</p>
-        <p> express 개꿀이네</p>
+        <p>들어오긴 하는데 뭐하냐</p>
     </div>
     <div class="contentBox" id="contentBox2">
+        <% if(locals.sectionPath){ %>
+            <%- include(sectionPath) -%>
+        <% } %>
         <% if(locals.memoListData){ %>
             <ul>
                 <% for(var i=0;i < memoListData.length;i++){ %>
@@ -13,8 +15,6 @@
         <% } %>
     </div>
     <div class="contentBox" id="contentBox3">
-        <% if(locals.sectionPath){ %>
-            <%- include(sectionPath) -%>
-        <% } %>
+        
     </div>
 </section>
