--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,13 @@ ol, ul{
 }
 
 /* 잠깐만 */
-
+#category{
+    margin : 0 auto;
+    width: 80%;
+    max-width:1280px;
+    border-top: solid 1px #000;
+    border-bottom: solid 1px #000;
+}
 #category li{
     display: inline-block;
     margin: 0 15px;
