--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,7 @@
 <header>
     <div id="title">
-        <h1><a href="/">HEADERRRRRRRRRRR</a></h1>
+        <div><h1><a href="/">HEADERRRRRRRRRRR</a></h1></div>
+        <div id="login" style=""><a href="/login">login</a></div>
     </div>
     <nav>
         <div id="category">
