--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>startP</title>
 </head>
+<link rel="stylesheet" href="/css/bootstrap.min.css">
+<script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="/css/main.css" type="text/css">
+<script src="../socket.io-client/dist/socket.io.js"></script>
 <body>
     <%- include('header.ejs') -%>
     <%- include('section.ejs') -%>
